# ProArb_MVP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  FINE_MIDPOINT_UPGRADE.md  README-single-container.md  README.md  config.yaml  fix_existing_csv.py  main.py  nginx.conf  pyproject.toml  pytest.ini  supervisord.conf  trading_config.yaml
.github/workflows/: docker-build-push.yml
data/: early_exit_results.csv  positions.csv  results.csv  telegram_deadletter.jsonl
docs/: PRD.md  Polymarket-Deribit 期权套利系统.md  Polymarket-Deribit 期权套利系统2.md  api_market_endpoint.md  api_response_example.json  全自动PM-DR配对功能(1).md  技术需求文档.md  提前平仓功能PRD.md  策略.md  策略计算文档.md
src/: __init__.py  api_server.py  early_exit_monitor.py  main.py  main2.py  main3.py  main_.py  test.py  test2.py  test3.py  test_live_trading.py
src/api/: db.py  ev.py  health.py  lifespan.py  market.py  models.py  pm.py  pnl.py  position.py
src/build_event/: build_event.py  build_event_for_data.py  init_markets.py
src/core/: DeribitStream.py  PolymarketAPI.py  __init__.py  deribit_api.py  deribit_client.py  get_deribit_option_data.py  get_polymarket_slippage.py  payoff.py  polymarket_client.py
src/fetch_data/: __init__.py  deribit_api.py  deribit_client.py  get_polymarket_slippage.py  polymarket_api.py  polymarket_client.py  polymarket_ws.py
src/filters/: filters.py  record_signal_filter.py  trade_filter.py
src/loop_event/: init_markets.py
src/maintain_data/: ev.py  maintain_data.py
src/models/: result_record.py
tests/: api.http  test3.py  test4.py  test5.py  test_live_trading.py  test_save_result.py
(+121 files in other folders)
