[project]
name = "probarb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.27.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "websockets>=15.0.1",
]
